syntax = "proto3";

package sandbox;

message SampleMessage {
  string string_field = 1;
  int32 int_field = 2;
  bool bool_field = 3;
  repeated int32 repeated_int_field = 4;

  EmbeddedMessage embedded_message_field = 5;
  repeated EmbeddedMessage repeated_embedded_message_field = 6;

  message EmbeddedMessage {
    string string_field = 1;
    int32 int_field = 2;
  }
}
